# freertos-esp32-wifi-connect-demo

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig.defaults
scripts/: build.sh  configure.sh  flash.sh  lint.sh  monitor.sh
src/: main.c
src/config/: demo_config.h  demo_logging_config.h  demo_wifi_config.h
src/wifi/: demo_wifi.c  demo_wifi.h
